--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ port:        4000
 highligher:  true
 markdown:    kramdown
 permalink:   date
-excerpt_separator: "\n-----\n"
+excerpt_separator: "<!excerpt>"
 
 rdiscount:
   input: GFM
